# fcitx5-m17n

./: .gitignore  CMakeLists.txt  COPYING  Messages.sh  README.md  README.rst  common.mk  config.h.in  org.fcitx.Fcitx5.Addon.M17N.metainfo.xml.in  org.fcitx.fcitx5-m17n.metainfo.xml.in
.github/workflows/: check.yml
cmake/: FindM17N.cmake
im/: CMakeLists.txt  Makefile  config.c  default  engine.cpp  engine.h  fcitx-m17n.c  fcitx-m17n.conf.in  fcitx-m17n.desc  fcitx-m17n.h  i18nname.c  i18nname.cpp  keyname.c  keyname.h  keysymname.c  keysymname.cpp  keysymname.h  m17n.conf.in  m17n.conf.in.in  m17nconfig.c  minput_list.c  minput_list.h  overrideparser.c  overrideparser.cpp  overrideparser.h
po/: CMakeLists.txt  Makefile  POTFILES.in.in  ca.po  da.po  de.po  fcitx-m17n.pot  fcitx5-m17n.pot  fr.po  he.po  ja.po  ka.po  ko.po  mkpo  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
test/: CMakeLists.txt  testdir.h.in  testm17n.cpp
test/addon/: CMakeLists.txt
testmim/: CMakeLists.txt  Makefile  config.mk  getline.c  getline.h  m17n.hh  testmim.cc  testoverride.c
